--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,11 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
+        "laravelcollective/html": "^6.3",
+        "livewire/livewire": "^2.10",
         "maatwebsite/excel": "^3.1",
-        "psr/simple-cache": "^2.0"
+        "psr/simple-cache": "^2.0",
+        "yajra/laravel-datatables-oracle": "^10.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
